--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">WeatherApp</string>
+
+    <string name ="weather">Weather</string>
+    <string name ="wind_direction">Wind Direction:</string>
+    <string name ="wind_speed">Wind Speed:</string>
+
 </resources>
